[gd_scene load_steps=15 format=2]

[ext_resource path="res://DoorConnections/Inside_link_Baaaar.tres" type="Resource" id=1]
[ext_resource path="res://World/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level.gd" type="Script" id=3]
[ext_resource path="res://UI/background parallax.png" type="Texture" id=4]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/balao2.gd" type="Script" id=6]
[ext_resource path="res://World/SaveStation.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/balao6.gd" type="Script" id=8]
[ext_resource path="res://balao.png" type="Texture" id=9]
[ext_resource path="res://Levels/balao.gd" type="Script" id=10]
[ext_resource path="res://Levels/balao3.gd" type="Script" id=11]
[ext_resource path="res://Levels/balao5.gd" type="Script" id=12]
[ext_resource path="res://Levels/balao4.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]

[node name="Level" type="Node2D" groups=[
"Persists",
]]
script = ExtResource( 3 )

[node name="paralaks" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="paralaks"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="paralaks/ParallaxBackground"]
motion_mirroring = Vector2( 320, 300 )

[node name="Sprite" type="Sprite" parent="paralaks/ParallaxBackground/ParallaxLayer"]
position = Vector2( 235, 75 )
texture = ExtResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( -589827, 0, 0, -589826, 0, 1, -589825, 0, 1, -655360, 0, 1, -655359, 0, 1, -655358, 0, 1, -655357, 0, 1, -655356, 0, 1, -655355, 0, 1, -655354, 0, 1, -655353, 0, 1, -655352, 0, 1, -655351, 0, 1, -655350, 0, 1, -655349, 0, 1, -655348, 0, 1, -655347, 0, 1, -655346, 0, 1, -655345, 0, 1, -655344, 0, 1, -655343, 0, 1, -655342, 0, 1, -655341, 0, 1, -655340, 0, 1, -655339, 0, 2, -524297, 0, 0, -524296, 0, 1, -524295, 0, 1, -524294, 0, 1, -524293, 0, 1, -524292, 0, 1, -524291, 0, 65542, -524290, 0, 65537, -524289, 0, 65537, -589824, 0, 65537, -589823, 0, 65537, -589822, 0, 65537, -589821, 0, 65537, -589820, 0, 65537, -589819, 0, 65537, -589818, 0, 65537, -589817, 0, 65537, -589816, 0, 65537, -589815, 0, 65537, -589814, 0, 65537, -589813, 0, 65537, -589812, 0, 65537, -589811, 0, 65537, -589810, 0, 65537, -589809, 0, 65537, -589808, 0, 65537, -589807, 0, 65537, -589806, 0, 65537, -589805, 0, 65537, -589804, 0, 65537, -589803, 0, 65541, -589802, 0, 1, -589801, 0, 2, -458762, 0, 0, -458761, 0, 65542, -458760, 0, 65537, -458759, 0, 65537, -458758, 0, 65537, -458757, 0, 65537, -458756, 0, 65537, -458755, 0, 65537, -458754, 0, 65537, -458753, 0, 65537, -524288, 0, 65537, -524287, 0, 65537, -524286, 0, 65537, -524285, 0, 65537, -524284, 0, 65537, -524283, 0, 65537, -524282, 0, 65537, -524281, 0, 65537, -524280, 0, 65537, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -524275, 0, 65537, -524274, 0, 65537, -524273, 0, 65537, -524272, 0, 65537, -524271, 0, 65537, -524270, 0, 65537, -524269, 0, 65537, -524268, 0, 65537, -524267, 0, 65537, -524266, 0, 65537, -524265, 0, 65541, -524264, 0, 2, -524254, 0, 0, -524253, 0, 4, -524252, 0, 3, -524251, 0, 4, -524250, 0, 4, -524249, 0, 327684, -524248, 0, 196610, -524247, 0, 196610, -524246, 0, 196609, -524245, 0, 131076, -524244, 0, 6, -393227, 0, 0, -393226, 0, 65540, -393225, 0, 65537, -393224, 0, 65537, -393223, 0, 65537, -393222, 0, 65537, -393221, 0, 65537, -393220, 0, 65537, -393219, 0, 65537, -393218, 0, 65537, -393217, 0, 65537, -458752, 0, 65537, -458751, 0, 65537, -458750, 0, 65537, -458749, 0, 65537, -458748, 0, 65537, -458747, 0, 65537, -458746, 0, 65537, -458745, 0, 65537, -458744, 0, 65537, -458743, 0, 65537, -458742, 0, 65537, -458741, 0, 65537, -458740, 0, 65537, -458739, 0, 65537, -458738, 0, 65537, -458737, 0, 65537, -458736, 0, 65537, -458735, 0, 65537, -458734, 0, 65537, -458733, 0, 65537, -458732, 0, 65537, -458731, 0, 65537, -458730, 0, 65537, -458729, 0, 65537, -458728, 0, 65541, -458727, 0, 2, -458720, 0, 0, -458719, 0, 3, -458718, 0, 65540, -458717, 0, 65537, -458716, 0, 65537, -458715, 0, 65537, -458714, 0, 65537, -458713, 0, 65538, -458710, 0, 327680, -458708, 0, 65541, -458707, 0, 131077, -327691, 0, 65536, -327690, 0, 65537, -327689, 0, 65537, -327688, 0, 65537, -327687, 0, 65537, -327686, 0, 65537, -327685, 0, 65537, -327684, 0, 65537, -327683, 0, 65537, -327682, 0, 65537, -327681, 0, 65537, -393216, 0, 65537, -393215, 0, 65537, -393214, 0, 65537, -393213, 0, 65537, -393212, 0, 65537, -393211, 0, 65537, -393210, 0, 65537, -393209, 0, 65537, -393208, 0, 65537, -393207, 0, 65537, -393206, 0, 65537, -393205, 0, 65537, -393204, 0, 65537, -393203, 0, 65537, -393202, 0, 65537, -393201, 0, 65537, -393200, 0, 65537, -393199, 0, 65537, -393198, 0, 65537, -393197, 0, 65537, -393196, 0, 65537, -393195, 0, 65537, -393194, 0, 65537, -393193, 0, 65537, -393192, 0, 65537, -393191, 0, 65538, -393186, 0, 0, -393185, 0, 327684, -393184, 0, 262148, -393183, 0, 131078, -393182, 0, 65537, -393181, 0, 65537, -393180, 0, 65537, -393179, 0, 65537, -393178, 0, 65537, -393177, 0, 65539, -393176, 0, 2, -393173, 0, 196608, -393170, 0, 196608, -262155, 0, 65536, -262154, 0, 65537, -262153, 0, 65537, -262152, 0, 65537, -262151, 0, 65537, -262150, 0, 65537, -262149, 0, 65537, -262148, 0, 5, -262147, 0, 131073, -262146, 0, 131073, -262145, 0, 131073, -327680, 0, 131073, -327679, 0, 131073, -327678, 0, 131073, -327677, 0, 131073, -327676, 0, 131073, -327675, 0, 131073, -327674, 0, 131073, -327673, 0, 131073, -327672, 0, 131073, -327671, 0, 131073, -327670, 0, 131073, -327669, 0, 131073, -327668, 0, 131073, -327667, 0, 131073, -327666, 0, 131073, -327665, 0, 131073, -327664, 0, 131073, -327663, 0, 131073, -327662, 0, 131073, -327661, 0, 131073, -327660, 0, 131073, -327659, 0, 131073, -327658, 0, 6, -327657, 0, 65537, -327656, 0, 65537, -327655, 0, 65538, -327651, 0, 5, -327650, 0, 262148, -327649, 0, 262149, -327647, 0, 65536, -327646, 0, 65537, -327645, 0, 65537, -327644, 0, 65537, -327643, 0, 65537, -327642, 0, 65537, -327641, 0, 65537, -327640, 0, 65538, -327637, 0, 262144, -327634, 0, 262144, -196619, 0, 65536, -196618, 0, 65537, -196617, 0, 65537, -196616, 0, 65537, -196615, 0, 65537, -196614, 0, 65537, -196613, 0, 65537, -196612, 0, 65538, -262122, 0, 65536, -262121, 0, 65537, -262120, 0, 65537, -262119, 0, 65541, -262118, 0, 2, -262115, 0, 262144, -262113, 0, 327683, -262112, 0, 4, -262111, 0, 65540, -262110, 0, 65537, -262109, 0, 65537, -262108, 0, 65537, -262107, 0, 65537, -262106, 0, 65537, -262105, 0, 131078, -262104, 0, 131074, -262101, 0, 262144, -262098, 0, 262144, -131083, 0, 65536, -131082, 0, 65537, -131081, 0, 65537, -131080, 0, 65537, -131079, 0, 65537, -131078, 0, 65537, -131077, 0, 65537, -131076, 0, 65538, -196586, 0, 65536, -196585, 0, 65537, -196584, 0, 65537, -196583, 0, 65537, -196582, 0, 65538, -196579, 0, 262144, -196577, 0, 65536, -196576, 0, 65537, -196575, 0, 65537, -196574, 0, 65537, -196573, 0, 65537, -196572, 0, 65537, -196571, 0, 65537, -196570, 0, 65537, -196569, 0, 65538, -196565, 0, 327680, -196563, 0, 5, -196562, 0, 65542, -65547, 0, 65536, -65546, 0, 65537, -65545, 0, 65537, -65544, 0, 65537, -65543, 0, 65537, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65538, -131050, 0, 65536, -131049, 0, 65537, -131048, 0, 65537, -131047, 0, 65537, -131046, 0, 65538, -131043, 0, 65541, -131042, 0, 196612, -131041, 0, 65540, -131040, 0, 65537, -131039, 0, 65537, -131038, 0, 65537, -131037, 0, 65537, -131036, 0, 65537, -131035, 0, 65537, -131034, 0, 131078, -131033, 0, 131074, -131030, 0, 196608, -131027, 0, 458752, -11, 0, 65536, -10, 0, 65537, -9, 0, 65537, -8, 0, 65537, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 65538, -65514, 0, 65536, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 5, -65510, 0, 131074, -65506, 0, 131072, -65505, 0, 131078, -65504, 0, 65537, -65503, 0, 65537, -65502, 0, 65537, -65501, 0, 65537, -65500, 0, 65537, -65499, 0, 65537, -65498, 0, 65538, -65496, 0, 0, -65495, 0, 327684, -65494, 0, 262146, -65493, 0, 196610, -65492, 0, 131077, 65525, 0, 65536, 65526, 0, 65537, 65527, 0, 65537, 65528, 0, 65537, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 65537, 65532, 0, 65538, 22, 0, 65536, 23, 0, 65537, 24, 0, 65537, 25, 0, 65538, 31, 0, 393219, 32, 0, 131073, 33, 0, 131073, 34, 0, 131073, 35, 0, 131073, 36, 0, 131073, 37, 0, 131073, 38, 0, 393216, 39, 0, 131076, 40, 0, 262148, 41, 0, 131074, 131061, 0, 65536, 131062, 0, 65537, 131063, 0, 65537, 131064, 0, 65537, 131065, 0, 65537, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65538, 65558, 0, 65536, 65559, 0, 65537, 65560, 0, 65537, 65561, 0, 65538, 65566, 0, 131075, 65567, 0, 65542, 196597, 0, 131072, 196598, 0, 6, 196599, 0, 65537, 196600, 0, 65537, 196601, 0, 65537, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65538, 131094, 0, 65536, 131095, 0, 65537, 131096, 0, 5, 131097, 0, 131074, 262134, 0, 65536, 262135, 0, 65537, 262136, 0, 65537, 262137, 0, 65537, 262138, 0, 65537, 262139, 0, 65537, 262140, 0, 65541, 262141, 0, 1, 262142, 0, 1, 262143, 0, 1, 196608, 0, 1, 196609, 0, 1, 196610, 0, 1, 196611, 0, 1, 196612, 0, 1, 196613, 0, 1, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 0, 1, 196623, 0, 1, 196624, 0, 1, 196625, 0, 1, 196626, 0, 1, 196627, 0, 1, 196628, 0, 1, 196629, 0, 1, 196630, 0, 65542, 196631, 0, 65537, 196632, 0, 65538, 327670, 0, 65536, 327671, 0, 65537, 327672, 0, 65537, 327673, 0, 65537, 327674, 0, 65537, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 5, 262167, 0, 131073, 262168, 0, 131074, 393206, 0, 65536, 393207, 0, 65537, 393208, 0, 65537, 393209, 0, 65537, 393210, 0, 65537, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65538, 458742, 0, 65536, 458743, 0, 65537, 458744, 0, 65537, 458745, 0, 65537, 458746, 0, 65537, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 5, 393220, 0, 131073, 393221, 0, 6, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65538, 524278, 0, 65536, 524279, 0, 65537, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65538, 458757, 0, 65536, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65538, 589814, 0, 65536, 589815, 0, 65537, 589816, 0, 65537, 589817, 0, 65537, 589818, 0, 65537, 589819, 0, 65537, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65539, 524292, 0, 1, 524293, 0, 65540, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65538, 655350, 0, 65536, 655351, 0, 65537, 655352, 0, 65537, 655353, 0, 65537, 655354, 0, 65537, 655355, 0, 65537, 655356, 0, 65537, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65538, 720886, 0, 65536, 720887, 0, 65537, 720888, 0, 65537, 720889, 0, 65537, 720890, 0, 65537, 720891, 0, 65537, 720892, 0, 65537, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65538, 786422, 0, 65536, 786423, 0, 65537, 786424, 0, 65537, 786425, 0, 65537, 786426, 0, 65537, 786427, 0, 65537, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65538, 851958, 0, 131072, 851959, 0, 131073, 851960, 0, 131073, 851961, 0, 131073, 851962, 0, 131073, 851963, 0, 131073, 851964, 0, 131073, 851965, 0, 131073, 851966, 0, 131073, 851967, 0, 131073, 786432, 0, 131073, 786433, 0, 131073, 786434, 0, 131073, 786435, 0, 131073, 786436, 0, 131073, 786437, 0, 131073, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 131073, 786448, 0, 131073, 786449, 0, 131073, 786450, 0, 131073, 786451, 0, 131073, 786452, 0, 131073, 786453, 0, 131073, 786454, 0, 131074 )

[node name="Door" parent="." instance=ExtResource( 2 )]
position = Vector2( 11.6541, 53.3231 )
scale = Vector2( 0.957093, 1 )
connection = ExtResource( 1 )
new_level_path = "res://Levels/Level_Inside.tscn"

[node name="SaveStation" parent="." instance=ExtResource( 7 )]
position = Vector2( 647.434, 103.266 )

[node name="balao" type="StaticBody2D" parent="."]
position = Vector2( 275.748, 66.4963 )
script = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="balao"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="balao/Area2D"]
position = Vector2( 3.53954, 21.7091 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="balao"]
position = Vector2( 3.30356, 9.20277 )
texture = ExtResource( 9 )

[node name="balao2" type="StaticBody2D" parent="."]
position = Vector2( 377.802, 62.7166 )
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="balao2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="balao2/Area2D"]
position = Vector2( 3.53954, 21.7091 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="balao2"]
position = Vector2( 3.30356, 9.20277 )
texture = ExtResource( 9 )

[node name="balao3" type="StaticBody2D" parent="."]
position = Vector2( 172.435, 65.2364 )
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="balao3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="balao3/Area2D"]
position = Vector2( 3.53954, 21.7091 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="balao3"]
position = Vector2( 3.30356, 9.20277 )
texture = ExtResource( 9 )

[node name="balao4" type="StaticBody2D" parent="."]
position = Vector2( -71.9901, 67.7562 )
script = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="balao4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="balao4/Area2D"]
position = Vector2( 3.53954, 21.7091 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="balao4"]
position = Vector2( 3.30356, 9.20277 )
texture = ExtResource( 9 )

[node name="balao5" type="StaticBody2D" parent="."]
position = Vector2( 515.133, 80.3555 )
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="balao5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="balao5/Area2D"]
position = Vector2( 3.53954, 21.7091 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="balao5"]
position = Vector2( 3.30356, 9.20277 )
texture = ExtResource( 9 )

[node name="balao6" type="StaticBody2D" parent="."]
position = Vector2( 82.9802, 61.4566 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="balao6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="balao6/Area2D"]
position = Vector2( 3.53954, 21.7091 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="balao6"]
position = Vector2( 3.30356, 9.20277 )
texture = ExtResource( 9 )

[connection signal="body_entered" from="balao/Area2D" to="balao" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="balao/Area2D" to="balao" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="balao2/Area2D" to="balao2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="balao2/Area2D" to="balao2" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="balao3/Area2D" to="balao3" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="balao3/Area2D" to="balao3" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="balao4/Area2D" to="balao4" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="balao4/Area2D" to="balao4" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="balao5/Area2D" to="balao5" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="balao5/Area2D" to="balao5" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="balao6/Area2D" to="balao6" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="balao6/Area2D" to="balao6" method="_on_Area2D_body_exited"]

[editable path="Door"]
